Оплата баллами по QR клиента на рабочем месте сотрудника и в админке; уведомление request.paid
